--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "protof"
 version = "0.0.2"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+build = "build.rs"
 
 [dependencies]
 walkdir = "2.3"
 dirs = "5.0.1"
 indicatif = "0.16.2"
 colored = "2.0"
+cc = "1.0"
